# lane-detection-classic

./: .gitignore  README.md  demo.py  packages.txt  pyproject.toml  requirements.txt  setup.py
app/: README.md  app.py  backend.py  demo.py  frontend.py  requirements.txt  rt_video_processor.py  single_frame_processor.py  streamlit_detector.py  streamlit_writer.py
app/elements/: __init__.py  file_upload.py  media_preview.py  release.py  sidebar_configs.py  source_management.py  streamlit_detector.py  streamlit_writer.py  video_processing.py
expiriments/: __init__.py  bilateral_blur.py  box_blur.py  median_blur.py  python_filters.py
expiriments/gaussian/: __init__.py  gaussian_blur.py  gaussian_horizontal.py  gaussian_vertical.py
lane_detection/: __init__.py
lane_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lane_detection/detection/: __init__.py  detection_system.py  grid_search.py  initializer.py  single_lane_line_detector.py
lane_detection/evaluation/: __init__.py  regression_evaluator.py  regression_metrics.py
lane_detection/feature_generation/: __init__.py  threshold_map_generator.py  vert_edge_map_generator.py
lane_detection/feature_selection/: __init__.py  direct_pixel_selector.py  hough_p_selector.py
lane_detection/image_geometry/: __init__.py  bev_projector.py  roi_masker.py
lane_detection/studio/: control.py  custodian.py  illustrate.py  write.py  (+3 more)
scripts/: curved_lane_demo.py  demo_grid_search.py  demo_image.py  demo_video.py  grid_search_demo.py  readme_visualizations.py  static_image_demo.py  straight_lane_demo.py
(+12 files in other folders)
